dictionaries in python

--- a/9_Storing Data Using Other Collection Types.ipynb
+++ b/9_Storing Data Using Other Collection Types.ipynb
@@ -475,7 +475,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'northern fulmar', 'long-tailed jaeger', 'canada goose', 'snow goose'}\n"
+      "{'long-tailed jaeger', 'northern fulmar', 'snow goose', 'canada goose'}\n"
      ]
     }
    ],
@@ -686,41 +686,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Storing using dictionary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "canada goose\n",
-      "canada goose\n",
-      "long-tailed jaeger\n",
-      "canada goose\n",
-      "snow goose\n",
-      "canada goose\n",
-      "long-tailed jaeger\n",
-      "canada goose\n",
-      "northern fulmar\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -734,7 +712,8 @@
     }
    ],
    "source": [
-    "from typing import List, Any, TextIO\n",
+    "# bird observation using a list\n",
+    "from typing import List, Any, TextIO, Dict\n",
     "from io import StringIO\n",
     "def count_bird(observation_file:TextIO)->List[List[Any]]:\n",
     "    \"\"\"Return a set of the bird species listed in observations_file, which has one bird species per line.\n",
@@ -764,8 +743,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -773,7 +754,7 @@
        "{'canada goose': 3, 'northern fulmar': 1}"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,8 +766,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -794,7 +777,7 @@
        "1"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,8 +788,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -814,7 +799,7 @@
        "{'eagle': 999, 'snow goose': 33}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,8 +813,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -837,7 +824,7 @@
        "{'eagle': 9, 'snow goose': 33}"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,8 +836,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -858,7 +847,7 @@
        "{'eagle': 9}"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,8 +859,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "bird_to_observations['snow goose'] = 9"
@@ -879,8 +870,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -888,7 +881,7 @@
        "True"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,8 +892,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -917,8 +912,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -940,8 +937,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
+   "execution_count": 40,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -949,7 +948,7 @@
        "dict_keys(['Newton', 'Darwin', 'Turing'])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,8 +960,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
+   "execution_count": 41,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -970,7 +971,7 @@
        "dict_values([1642, 1809, 1912])"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,8 +982,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -990,7 +993,7 @@
        "dict_items([('Newton', 1642), ('Darwin', 1809), ('Turing', 1912)])"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,8 +1004,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1010,7 +1015,7 @@
        "1642"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,8 +1026,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
+   "execution_count": 44,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1030,7 +1037,7 @@
        "1867"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,8 +1048,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1050,7 +1059,7 @@
        "{'Curie': 1867, 'Hopper': 1906, 'Franklin': 1920}"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,8 +1071,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1076,7 +1087,7 @@
        " 'Franklin': 1920}"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,8 +1099,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1097,7 +1110,7 @@
        "{'Curie': 1867, 'Hopper': 1906, 'Franklin': 1920}"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,8 +1121,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
+   "execution_count": 48,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "researcher_to_birthdate.clear()"
@@ -1117,8 +1132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1126,7 +1143,7 @@
        "{}"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,6 +1151,371 @@
    "source": [
     "researcher_to_birthdate"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "canada goose 5\n",
+      "long-tailed jaeger 2\n",
+      "snow goose 1\n",
+      "northern fulmar 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bird observation using a dictionary\n",
+    "def count_birds(observation_file:TextIO)-> Dict[str, int]:\n",
+    "    \"\"\"Return a set of the bird species listed in observations_file, which has one bird species per line.\n",
+    "    \n",
+    "    >>> infile = StringIO('bird 1\\\\nbird 2\\\\nbird 1\\\\n')\n",
+    "    >>> count_birds(infile)\n",
+    "    {'bird 1': 2, 'bird 2': 1}\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    bird_to_observations = {}\n",
+    "    \n",
+    "    for line in observation_file:\n",
+    "        bird = line.strip()\n",
+    "        if bird in bird_to_observations:\n",
+    "            bird_to_observations[bird] += 1\n",
+    "        else:\n",
+    "            bird_to_observations[bird] = 1\n",
+    "    return bird_to_observations\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    with open('files/observations.txt', 'r') as file:\n",
+    "        bird_to_observations = count_birds(file)\n",
+    "        for bird, observations in bird_to_observations.items():\n",
+    "            print(bird, observations)\n",
+    "        testmod()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{5: ['canada goose'],\n",
+       " 2: ['long-tailed jaeger'],\n",
+       " 1: ['snow goose', 'northern fulmar']}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observation_to_birds = {}\n",
+    "for bird, observation in bird_to_observations.items():\n",
+    "    if observation in observation_to_birds:\n",
+    "        observation_to_birds[observation].append(bird)\n",
+    "    else:\n",
+    "        observation_to_birds[observation] = [bird]\n",
+    "observation_to_birds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : snow goose northern fulmar \n",
+      "2 : long-tailed jaeger \n",
+      "5 : canada goose \n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in sorted(observation_to_birds.keys()):\n",
+    "    print(key, ':', end=' ')\n",
+    "    for value in observation_to_birds[key]:\n",
+    "        print(value, end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'snow goose' in bird_to_observations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 1**\n",
+    "\n",
+    "Write a function called find_dups that takes a list of integers as its input \n",
+    "argument and returns a set of those integers occurring two or more times in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 6, 9}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=12)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_dups(list_of_integers:list)-> Set:\n",
+    "    \"\"\"Returns a set of numbers that appears more than once in a list of numbers\n",
+    "    \n",
+    "    >>> find_dups([1, 2, 1, 2, 3, 4, 6])\n",
+    "    {1, 2}\n",
+    "    >>> find_dups([1,2,3,4])\n",
+    "    set()\n",
+    "    \"\"\"\n",
+    "    list_set = set()\n",
+    "    dup_set = set()\n",
+    "    for number in list_of_integers:\n",
+    "        len_initial = len(list_set)\n",
+    "        list_set.add(number)\n",
+    "        len_after = len(list_set)\n",
+    "        if len_initial == len_after:\n",
+    "            dup_set.add(number)\n",
+    "    return dup_set\n",
+    "\n",
+    "list_of_integers = [1, 2, 1, 2, 3, 4, 6, 9, 9, 0, 0, 8, 6, 6, 9]\n",
+    "print(find_dups(list_of_integers))\n",
+    "testmod()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 3**\n",
+    "\n",
+    "Python’s set objects have a method called pop that removes and returns an\n",
+    "arbitrary element from the set. If the set gerbils contains five cuddly little ani-\n",
+    "mals, for example, calling gerbils.pop() five times will return those animals one\n",
+    "by one, leaving the set empty at the end. Use this to write a function called\n",
+    "mating_pairs that takes two equal-sized sets called males and females as input and\n",
+    "returns a set of pairs; each pair must be a tuple containing one male and one\n",
+    "female. (The elements of males and females may be strings containing gerbil\n",
+    "names or gerbil ID numbers—your function must work with both.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{('cat', 'shark'), ('lion', 'tiger'), ('dog', 'hen')}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=14)"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mating_pairs(males:set, females:set)-> set :\n",
+    "    \"\"\" Takes two sets (males, females) of equal sizes as input values and returns a set of tuple; where each tuple\n",
+    "    contains one male and female value. if an empty set in passed it returns an empty set.\n",
+    "    \n",
+    "    >>> mating_pairs({'cat', 'dog', 'lion'}, {'tiger', 'hen', 'shark'})\n",
+    "    {('cat', 'shark'), ('lion', 'tiger'), ('dog', 'hen')}\n",
+    "    >>> mating_pairs(set(), set())\n",
+    "    set()\n",
+    "    \"\"\"\n",
+    "    mating_set = set()\n",
+    "    for entry in range(len(males)):\n",
+    "        male, female = males.pop(), females.pop()\n",
+    "        mating_set.add((male, female))\n",
+    "    return mating_set    \n",
+    "\n",
+    "print(mating_pairs({'cat', 'dog', 'lion'}, {'tiger', 'hen', 'shark'}))\n",
+    "testmod()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 4**\n",
+    "\n",
+    "The PDB file format is often used to store information about molecules. A\n",
+    "PDB file may contain zero or more lines that begin with the word AUTHOR (which\n",
+    "may be in uppercase, lowercase, or mixed case), followed by spaces or tabs,\n",
+    "followed by the name of the person who created the file. Write a function that\n",
+    "takes a list of filenames as an input argument and returns the set of all author\n",
+    "names found in those files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ben, carlson', 'kent, bukky'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def author_names(filenames:TextIO)-> set:\n",
+    "    \"\"\"Takes in a PDB file and returns all the names of the authors contained in the file\n",
+    "    \n",
+    "    >>> infile = StringIO('author\\\\n :\\\\n kent,\\\\n andreas,\\\\n ')\n",
+    "    >>> author_names(infile)\n",
+    "    {'kent, andreas'}\n",
+    "    >>> infile = StringIO('author\\\\n :\\\\n kent,\\\\n ')\n",
+    "    >>> author_names(infile)\n",
+    "    {'kent'}\n",
+    "    >>> infile = StringIO('author\\\\n :\\\\n ')\n",
+    "    >>> author_names(infile)\n",
+    "    set()\n",
+    "    \"\"\"\n",
+    "    name_set = set()\n",
+    "    for names in filenames:\n",
+    "        if names.lower().startswith('author'):   \n",
+    "            name = names[7:].strip()\n",
+    "            name_set.add(name)\n",
+    "    return name_set\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    with open('files/authors.txt', 'r') as filename:\n",
+    "        filenames = filename.readlines()\n",
+    "        print(author_names(filenames))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First \n",
+      "Second\n",
+      "Third \n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('files/file_example.txt', 'r') as filename:\n",
+    "        filename = filename.readlines()\n",
+    "        for i in filename:\n",
+    "            i = i.strip()\n",
+    "            print(i[:6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
